--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>About Me</h2>
 	<p>Assalamu alaikum! I am Fatima Bukar, a passionate calligraphy artist and aspiring software developer.
 	I am currently learning html and css to build beautiful, elegant and responsive websites.</p>
-	<img src="C:\Users\USER\Desktop\titiscalligraphy\img\calligraphy.jpg" alt="My calligraphy sample">
+	<img src="calligraphy.jpg" alt="My calligraphy sample">
 </section>
 
 <section>
